--- a/css/main.css
+++ b/css/main.css
@@ -55,4 +55,11 @@ ul {
 
 @media only screen and (min-width: 38em) {
 
+  header {
+    text-align: left;
+  }
+
+  .right {
+    text-align: right;
+  }
 }
