--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ header {
   text-align: center;
 }
 
-nav ul li{
+nav ul li {
   color: #0074d9;
   list-style-type: none;
   display: inline-block;
@@ -45,7 +45,7 @@ nav ul a {
 }
 
 nav ul a:hover {
-  color: white;
+  color: #fff;
 }
 
 ul {
@@ -62,4 +62,5 @@ ul {
   .right {
     text-align: right;
   }
+
 }
